--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -54,7 +54,7 @@
                 </form>
             </tab>
             <tab heading="Edit Photos">
-                <p>Photos Edit</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
